--- a/assets/style.css
+++ b/assets/style.css
@@ -184,8 +184,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #b62b2b;
-  background-image: linear-gradient(to top, #ffe438, #a22f2f);
+  background-color: #FF2800;
+  background-image: linear-gradient(to top, #ED2939, #ED2939);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgb(255, 255, 255, 0.5);
@@ -209,7 +209,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, rgba(255, 2555, 255, 0.4), #ffffff);
+  background-image: linear-gradient(to top, rgba(255, 2555, 255, 0.4), #ED2939);
   z-index: 1;
   opacity: 0.8;
   -webkit-transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
@@ -243,7 +243,7 @@ body {
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(to left, rgb(0, 0, 0, 0.2), transparent, rgb(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #893434, #dfd02a);
+  background-image: linear-gradient(to left, rgb(0, 0, 0, 0.2), transparent, rgb(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #14757a, #39c6d6);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   animation: grow-flower-tree 4s backwards;
 }
@@ -259,7 +259,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgb(255, 162, 0, 0.4), #ffffff);
+  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #39c6d6);
 }
 
 .flower__line__leaf--1 {
@@ -305,14 +305,14 @@ body {
   bottom: 0vmin;
   width: 1vmin;
   height: 1vmin;
-  background-color: rgb(255, 251, 0);
+  background-color: #ff4d4d;
   border-radius: 50%;
   filter: blur(0.2vmin);
   animation: light-ans 4s linear infinite backwards;
 }
 
 .flower__light:nth-child(odd) {
-  background-color: #fff;
+  background-color: #3399ff;
 }
 
 .flower__light--1 {
@@ -356,7 +356,7 @@ body {
 }
 
 .flower__grass {
-  --c: #f2b054;
+  --c: #1aaa15;
   --line-w: 1.5vmin;
   position: absolute;
   bottom: 12vmin;
@@ -543,7 +543,7 @@ body {
 .flower__g-long {
   --w: 2vmin;
   --h: 6vmin;
-  --c: #da8e0b;
+  --c: #1aaa15;
   position: absolute;
   bottom: 10vmin;
   left: -3vmin;
@@ -598,7 +598,7 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #db840a;
+  border-left: 2vmin solid #079097;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
   -webkit-mask-image: linear-gradient(to top, transparent 30%, #f2eb2c 60%);
 }
@@ -771,8 +771,8 @@ body {
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(0, 0%, 100%, 0.2);
   background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #652f2f 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom right, #e14b19 50%, transparent 50%, transparent);
-  mask-image: linear-gradient(to bottom right, #ff0000 50%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
 }
 
 .flower__g-fr {
@@ -804,8 +804,8 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #692b2b;
-  -webkit-mask-image: linear-gradient(to top, transparent 25%, #f6d609 50%);
+  border-left: 2vmin solid #079097;
+  -webkit-mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
   position: relative;
   z-index: 1;
 }
@@ -819,7 +819,7 @@ body {
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(0, 0%, 100%, 0.2);
   background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #d67d00 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(135deg, #fff700 40%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #159faa 40%, transparent 50%, transparent);
 }
 
 .flower__g-fr__leaf--1 {
@@ -1000,7 +1000,7 @@ body {
 .long-g .leaf {
   --w: 15vmin;
   --h: 40vmin;
-  --c: #86c365;
+  --c: #1aaa15;
   position: absolute;
   bottom: 0;
   width: var(--w);
