--- a/assets/style.css
+++ b/assets/style.css
@@ -600,7 +600,7 @@ body {
   border-top-left-radius: 100%;
   border-left: 2vmin solid #079097;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
-  -webkit-mask-image: linear-gradient(to top, transparent 30%, #f2eb2c 60%);
+  -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
 }
 
 .flower__g-right--1 {
